# kitten_tts_flutter

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml  CMakeLists.txt  config.h
android/src/main/kotlin/com/example/kitten_tts_flutter/: KittenTtsFlutterPlugin.kt
android/src/test/kotlin/com/example/kitten_tts_flutter/: KittenTtsFlutterPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/kitten_tts_flutter_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
ios/: flutter_kitten_tts.podspec  kitten_tts_flutter.podspec
ios/kitten_tts_flutter/: Package.swift
ios/kitten_tts_flutter/Sources/kitten_tts_flutter/: KittenTtsFlutterPlugin.swift
lib/: flutter_kitten_tts.dart
lib/src/: espeak_ffi.dart  kitten_tts.dart  model_manager.dart  npz_reader.dart  phonemizer.dart  text_cleaner.dart  text_preprocessor.dart
macos/: flutter_kitten_tts.podspec  kitten_tts_flutter.podspec
macos/kitten_tts_flutter/: Package.swift
macos/kitten_tts_flutter/Sources/kitten_tts_flutter/: KittenTtsFlutterPlugin.swift
scripts/: fix_package_config.sh  setup_espeak.sh
test/: kitten_tts_flutter_test.dart  test.dart  text_preprocessor_test.dart
